attempt to bug fix bg connection

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -15,6 +15,9 @@
       </div>
       <p>No MCPI support detected on this site.</p>
       <p class="hint">Visit a website that supports the Model Context Protocol to use this client.</p>
+      <div id="action-buttons">
+        <button id="reconnect-btn" class="btn primary" style="display: none;">Reconnect</button>
+      </div>
     </div>
     
     <!-- Loading state while connecting -->
